--- a/src/includes/aepe/_headimg.pug
+++ b/src/includes/aepe/_headimg.pug
@@ -10,8 +10,8 @@ mj-section(padding="0" mj-class="bg0")
         mj-column(width="50%")
             mj-image(padding="0" width="300px" src="https://i.ibb.co/Y7DW32fN/jpo1-Img21062025.png" alt="Groupe d'étudiants")/
         mj-column(width="25%")
-            mj-image(padding="0" width="150px" src="https://i.ibb.co/cKjvqwZt/aepe1.jpg" alt="")/
+            mj-image(padding="0" width="150px" src="https://i.ibb.co/cKjvqwZt/aepe1.jpg" alt="Activités ludiques avec les enfants")/
         mj-column(width="25%")
-            mj-image(padding="0" width="150px" src="https://i.ibb.co/zWSxW6Fr/jpo-AEPEImg21062025.jpg" alt="")/
+            mj-image(padding="0" width="150px" src="https://i.ibb.co/zWSxW6Fr/jpo-AEPEImg21062025.jpg" alt="Prendre soins des plus petits")/
     mj-column(mj-class="bg0" width="100%")
         mj-text(align="center" padding="3px 20px" mj-class="T16-700 cTW") Journée Portes Ouvertes samedi&nbsp;21&nbsp;juin&nbsp;de&nbsp;9h30&nbsp;à&nbsp;13h
