--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -1,7 +1,7 @@
 
 <mjml>
   <mj-head>
-    <mj-title>JPO du 24 mai 2025 Ecosup Santé</mj-title>
+    <mj-title>JPO du 21 juin 2025 Ecosup Santé</mj-title>
     <mj-font name="Roboto" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&amp;display=swap"></mj-font>
     <mj-font name="fontAwesome" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
     <mj-raw>
@@ -24,17 +24,17 @@
       <mj-class name="T13-700" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="13px" line-height="17px" font-weight="700"/>
       <mj-class name="T13-400" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="13px" line-height="17px" font-weight="400"/>
       <mj-class name="T10-300" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="10px" line-height="12px" font-weight="300"/>
-      <mj-button border="2px solid #2DAAE1" border-radius="5px" background-color="transparent" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="16px" line-height="17px" font-weight="700" color="#2DAAE1"></mj-button>
+      <mj-button border="2px solid #2386C8" border-radius="5px" background-color="transparent" font-family="Roboto, Arial, Helvetica, sans-serif" font-style="normal" font-size="16px" line-height="17px" font-weight="700" color="#2386c8"></mj-button>
       <mj-class name="cT1" color="#1a1a1a"/>
       <mj-class name="cT0" color="#4d4d4d"/>
       <mj-class name="cT2" color="#999999"/>
       <mj-class name="cTW" color="#ffffff"/>
-      <mj-class name="c0" color="#2daae1"/>
-      <mj-class name="bg0" background-color="#2daae1"/>
-      <mj-class name="c1" color="#055063"/>
-      <mj-class name="bg1" background-color="#055063"/>
+      <mj-class name="c0" color="#2386c8"/>
+      <mj-class name="bg0" background-color="#2386c8"/>
+      <mj-class name="c1" color="#114364"/>
+      <mj-class name="bg1" background-color="#114364"/>
     </mj-attributes>
-    <mj-breakpoint width="460px"></mj-breakpoint>
+    <mj-breakpoint width="420px"></mj-breakpoint>
   </mj-head>
   <mj-body background-color="#f2f2f2" width="600px">
     <mj-section padding="0">
@@ -58,10 +58,10 @@
           <mj-image padding="0" width="300px" src="https://i.ibb.co/Y7DW32fN/jpo1-Img21062025.png" alt="Groupe d'étudiants"/>
         </mj-column>
         <mj-column width="25%">
-          <mj-image padding="0" width="150px" src="https://i.ibb.co/cKjvqwZt/aepe1.jpg" alt=""/>
+          <mj-image padding="0" width="150px" src="https://i.ibb.co/Kj1CLhZW/sm2.jpg" alt="travail de secrétariat médical"/>
         </mj-column>
         <mj-column width="25%">
-          <mj-image padding="0" width="150px" src="https://i.ibb.co/zWSxW6Fr/jpo-AEPEImg21062025.jpg" alt=""/>
+          <mj-image padding="0" width="150px" src="https://i.ibb.co/j9t15M2c/jpo-SMImg21062025.jpg" alt="utilisation du clavier pour réaliser le tavail quotidien"/>
         </mj-column>
       </mj-group>
       <mj-column mj-class="bg0" width="100%">
@@ -91,20 +91,20 @@
     </mj-wrapper>
     <mj-section mj-class="bg1" padding="0 20px">
       <mj-column>
-        <mj-text align="center" padding="14px 0" mj-class="T24-700" color="#ffffff" letter-spacing="2px"><a style="text-decoration:none;color:#ffffff;" href="https://ecosup-sante.fr/accompagnant-petite-enfance" target="_blank">www.ecosup-sante.fr</a></mj-text>
+        <mj-text align="center" padding="14px 0" mj-class="T24-700" color="#ffffff" letter-spacing="2px"><a style="text-decoration:none;color:#ffffff;" href="https://ecosup-sante.fr/secretaire-medicale-2" target="_blank">www.ecosup-sante.fr</a></mj-text>
       </mj-column>
     </mj-section>
     <mj-section padding="20px" background-color="#e6e6e6">
       <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="https://i.ibb.co/N6CNzTsk/icon-Aepe062025.png" alt="icon main dans la main"/>
+        <mj-image padding="0" width="224px" src="https://i.ibb.co/yFgqHh8x/icon-SM062025.png" alt="icon secrétariat médical"/>
       </mj-column>
       <mj-column width="80%">   
         <mj-spacer height="20px"></mj-spacer>
         <mj-text align="left" padding="0px 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en initial</mj-text>
-        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#2daae1;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">AEPE</span> Accompagnant(e) éducatif petite enfance</mj-text>
+        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#2386c8;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">SM</span> Secrétaire médical(e)</mj-text>
         <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
            <span style="color:#999999;">&#x25CF;</span> Post-Bac,</mj-text>
-        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0"><span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">12 mois</span>,</mj-text>
+        <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0"><span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">8 mois</span>,</mj-text>
         <mj-text padding="0 15px" align="left" mj-class="T16-400 cT0">
            <span style="color:#999999;">&#x25CF;</span> Formation initiale ou continue. Financement possible grâce à la mobilisation du CPF ou autres organismes extérieurs.</mj-text>
       </mj-column>
@@ -116,16 +116,16 @@
     </mj-section>
     <mj-section padding="20px" background-color="#e6e6e6">
       <mj-column width="20%">
-        <mj-image padding="0" width="224px" src="https://i.ibb.co/N6CNzTsk/icon-Aepe062025.png" alt="icon main dans la main"/>
+        <mj-image padding="0" width="224px" src="https://i.ibb.co/yFgqHh8x/icon-SM062025.png" alt="icon secrétariat médical"/>
       </mj-column>
       <mj-column width="80%">
         <mj-spacer height="20px"></mj-spacer>
         <mj-text align="left" padding="0 15px" mj-class="T13-700 cT1" text-transform="uppercase" letter-spacing="1px">Formation en apprentissage</mj-text>
-        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#2daae1;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">AEPE</span> Accompagnant(e) éducatif petite enfance</mj-text>
+        <mj-text align="left" padding="2px 15px" mj-class="T24-300 cT1"><span style="color:#2386c8;">&#x27A4;</span> <span style="font-weight:700;color:#1a1a1a;">SM</span> Secrétaire médical(e)</mj-text>
         <mj-text align="left" padding="0px 15px" mj-class="T16-400 cT0">
            <span style="color:#999999;">&#x25CF;</span> Post-Bac,</mj-text>
         <mj-text align="left" padding="0 15px" mj-class="T16-400 cT0">
-           <span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">12 mois</span>,</mj-text>
+           <span style="color:#999999;">&#x25CF;</span> Durée : <span style="font-weight:700;color:#1a1a1a;">18 mois</span>,</mj-text>
         <mj-text align="left" padding="0 15px" mj-class="T16-400 cT0">
            <span style="color:#999999;">&#x25CF;</span> Formation gratuite et rémunérée.</mj-text>
       </mj-column>
